--- a/blogpost.html
+++ b/blogpost.html
@@ -19,9 +19,8 @@
             </h1>
             <p>Y este es el parrafo de inicio</p>
             <p>Este es el segundo parrafo </p>
-            <p>Y este otro es el tercero
-                
-            </p>
+            <p>Y este otro es el tercero</p>
+            <h2>este es el titulo secundario</h2>
         </div>
     </div>
 </body>
