poniendo el footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,8 @@
             <p>Y este otro es el tercero</p>
             <h2>este es el titulo secundario    </h2>
         </div>
+
     </div>
+    <footer> Aprendiendo en platzi</footer>
 </body>
 </html>
